# Fastapi-React

./: .env  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250922_0001_init.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routers/: users.py
apps/api/app/core/: config.py  errors.py  logging_config.py  middleware.py  observability.py
apps/api/app/db/: session.py
apps/api/app/domain/: user.py
apps/api/app/models/: user.py
apps/api/app/repositories/: user_repository.py
apps/api/app/schemas/: user.py
apps/api/app/scripts/: entrypoint.sh
apps/api/app/services/: user_service.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_users.py
apps/api/tests/integration/: test_user_repo.py
apps/api/tests/unit/: test_validation.py
apps/web/: Dockerfile  entrypoint.sh  index.css.patch  index.html  nginx.conf  package.json  tsconfig.json
apps/web/public/: config.template.js
apps/web/src/: App.tsx  env.d.ts  main.tsx
apps/web/src/api/: http.ts  types.ts  users.ts
apps/web/src/components/: Modal.tsx  Toaster.tsx  Tooltip.tsx  UserForm.tsx
apps/web/src/lib/: validate.ts
infra/: otel-collector-config.yaml
